# MiniOpenClaw

./: .env  MINI_OPENCLAW_PARITY_PLAN.md  README.md  demo.py  pyproject.toml
miniopenclaw/: __init__.py  __main__.py  runtime.py
miniopenclaw/channels/: __init__.py  base.py  feishu.py  manager.py  telegram.py
miniopenclaw/cli/: __init__.py  commands.py
miniopenclaw/config/: loader.py  schema.py
miniopenclaw/core/: __init__.py  agent_loop.py  events.py  router.py
miniopenclaw/cron/: __init__.py  service.py
miniopenclaw/memory/: __init__.py  store.py
miniopenclaw/prompts/: system_core.txt
miniopenclaw/providers/: __init__.py  anthropic_provider.py  base.py  errors.py  factory.py  gemini_provider.py  openai_compat_provider.py  retry.py
miniopenclaw/session/: __init__.py  manager.py
miniopenclaw/skills/: __init__.py  loader.py
miniopenclaw/tools/: __init__.py  base.py  executor.py  file_tools.py  find_skill.py  registry.py  safety.py  schema.py  shell_tool.py  web_search.py
skills/creator-analysis/: SKILL.md
skills/creator-analysis/scripts/: run.py
skills/skill-creator/: SKILL.md
skills/skill-creator/scripts/: init_skill.py
